plugins {
    id "org.unbroken-dome.test-sets" version "1.4.2"
}

apply plugin: 'java'

jar {
    baseName = 'what-to-watch-core'
}

sourceCompatibility = 1.10
targetCompatibility = 1.10

repositories {
    mavenCentral()
}

testSets {
    integrationTest
}

dependencies {
    compile "com.google.guava:guava:${guavaVersion}"
    compile "org.jsoup:jsoup:$jsoupVersion"
    compile "com.squareup.okhttp3:okhttp:$okHttpVersion"
    compile "org.slf4j:slf4j-api:$slf4jVersion"
    compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
    compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    compile "io.micrometer:micrometer-core:$micrometerVersion"

    testCompile "ch.qos.logback:logback-classic:$logbackVersion"
    testCompile "junit:junit:$junitVersion"
    testCompile "org.mockito:mockito-core:$mockitoVersion"
    testCompile "org.assertj:assertj-core:$assertjVersion"

    integrationTestCompile sourceSets.test.output
}

check.dependsOn integrationTest
integrationTest.mustRunAfter test

println("[what-to-watch-boot] Building version: $version")
